--- a/base/textedit.ui
+++ b/base/textedit.ui
@@ -78,7 +78,7 @@ QTextEdit{font:13px Arial;}
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="corsorPosition_">
+      <widget class="QLabel" name="cursorPosition_">
        <property name="styleSheet">
         <string notr="true">font:14px Arial;</string>
        </property>
