--- a/client/maincontainer.ui
+++ b/client/maincontainer.ui
@@ -21,68 +21,30 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QWidget" name="mainContainerClassWidget_" native="true">
+    <widget class="QStackedWidget" name="mainContainerClassStackedWidget_">
      <property name="styleSheet">
       <string notr="true">background:white;</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,1">
-      <property name="spacing">
-       <number>0</number>
-      </property>
-      <property name="margin">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="ltp::client::ModuleButtonsWidget" name="widget" native="true">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>80</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>80</width>
-          <height>16777215</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="ltp::client::ProcessWidget" name="processWidget_" native="true">
-        <property name="minimumSize">
-         <size>
-          <width>680</width>
-          <height>519</height>
-         </size>
-        </property>
-        <property name="styleSheet">
-         <string notr="true"/>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <widget class="ltp::client::ProgramEditWidget" name="processWidget_">
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <property name="margin">
+        <number>0</number>
+       </property>
+      </layout>
+     </widget>
+     <widget class="ltp::client::ProgramEditWidget" name="programEditWidget_"/>
     </widget>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ltp::client::ProcessWidget</class>
+   <class>ltp::client::ProgramEditWidget</class>
    <extends>QWidget</extends>
-   <header>processwidget.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>ltp::client::ModuleButtonsWidget</class>
-   <extends>QWidget</extends>
-   <header>modulebuttonswidget.h</header>
+   <header>programeditwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
