--- a/client/modulebuttonswidget.ui
+++ b/client/modulebuttonswidget.ui
@@ -96,7 +96,7 @@
        </size>
       </property>
       <property name="text">
-       <string>加工</string>
+       <string/>
       </property>
      </widget>
     </item>
@@ -115,7 +115,7 @@
        </size>
       </property>
       <property name="text">
-       <string>文件管理</string>
+       <string/>
       </property>
      </widget>
     </item>
@@ -134,7 +134,7 @@
        </size>
       </property>
       <property name="text">
-       <string>编辑</string>
+       <string/>
       </property>
      </widget>
     </item>
@@ -153,7 +153,7 @@
        </size>
       </property>
       <property name="text">
-       <string>设置</string>
+       <string/>
       </property>
      </widget>
     </item>
@@ -172,7 +172,7 @@
        </size>
       </property>
       <property name="text">
-       <string>++</string>
+       <string/>
       </property>
      </widget>
     </item>
@@ -191,7 +191,7 @@
        </size>
       </property>
       <property name="text">
-       <string>++</string>
+       <string/>
       </property>
      </widget>
     </item>
@@ -210,9 +210,6 @@
     </item>
    </layout>
   </widget>
-  <zorder>moduleButtonsWidget_</zorder>
-  <zorder>verticalSpacer</zorder>
-  <zorder>verticalSpacer</zorder>
  </widget>
  <customwidgets>
   <customwidget>
