--- a/client/operationpanel.ui
+++ b/client/operationpanel.ui
@@ -151,6 +151,16 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="ltp::base::PlusMinusWidget" name="machiningRatio_" native="true">
+           <property name="minimumSize">
+            <size>
+             <width>140</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </widget>
@@ -251,6 +261,12 @@
    <class>ltp::base::PanelButton</class>
    <extends>QPushButton</extends>
    <header>base/panelbutton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>ltp::base::PlusMinusWidget</class>
+   <extends>QWidget</extends>
+   <header>base/plusminuswidget.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
