--- a/client/titlebar.ui
+++ b/client/titlebar.ui
@@ -74,7 +74,7 @@
          <string notr="true">font: 16px SIMHEI</string>
         </property>
         <property name="text">
-         <string>加工</string>
+         <string>主页</string>
         </property>
        </widget>
       </item>
