--- a/client/filemanagerwidget.ui
+++ b/client/filemanagerwidget.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ProcessWidgetClass</class>
- <widget class="QWidget" name="ProcessWidgetClass">
+ <class>FileManagerWidgetClass</class>
+ <widget class="QWidget" name="FileManagerWidgetClass">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>682</width>
+    <width>838</width>
     <height>519</height>
    </rect>
   </property>
@@ -28,7 +28,7 @@
   <property name="styleSheet">
    <string notr="true">background:#FFFFFF;</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -36,7 +36,7 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="ltp::client::ModuleButtonsWidget" name="processModuleButtonWidget_" native="true">
+    <widget class="ltp::client::ModuleButtonsWidget" name="fileManagerButtonWidget_" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
        <horstretch>80</horstretch>
@@ -58,43 +58,21 @@
     </widget>
    </item>
    <item>
-    <widget class="ltp::client::ModuleButtonsWidget" name="mainModuleButtonWidget_" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-       <horstretch>80</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>80</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>80</width>
-       <height>16777215</height>
-      </size>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="ltp::client::ProcessBar" name="processWidgetBar_" native="true"/>
+    <widget class="ltp::client::FileManagerBar" name="fileManagerBar_" native="true"/>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ltp::client::ProcessBar</class>
-   <extends>QWidget</extends>
-   <header>processbar.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
    <class>ltp::client::ModuleButtonsWidget</class>
    <extends>QWidget</extends>
    <header>modulebuttonswidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ltp::client::FileManagerBar</class>
+   <extends>QWidget</extends>
+   <header>filemanagerbar.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
