--- a/client/hintbar.ui
+++ b/client/hintbar.ui
@@ -26,7 +26,7 @@
       <string notr="true">QLabel{background:rgba(245, 245, 245, 255);}</string>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string/>
      </property>
     </widget>
    </item>
