--- a/client/maincontainer.ui
+++ b/client/maincontainer.ui
@@ -25,7 +25,7 @@
      <property name="styleSheet">
       <string notr="true">background:white;</string>
      </property>
-     <widget class="ltp::client::ProgramEditWidget" name="processWidget_">
+     <widget class="ltp::client::ProcessWidget" name="processWidget_">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <property name="spacing">
         <number>0</number>
@@ -35,6 +35,7 @@
        </property>
       </layout>
      </widget>
+     <widget class="ltp::client::FileManagerWidget" name="fileManagerWidget_"/>
      <widget class="ltp::client::ProgramEditWidget" name="programEditWidget_"/>
     </widget>
    </item>
@@ -45,6 +46,18 @@
    <class>ltp::client::ProgramEditWidget</class>
    <extends>QWidget</extends>
    <header>programeditwidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ltp::client::FileManagerWidget</class>
+   <extends>QWidget</extends>
+   <header>filemanagerwidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ltp::client::ProcessWidget</class>
+   <extends>QWidget</extends>
+   <header>processwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
