hua.g.l:1.修改加工界面坐标显示; 2.实时获取进给速度

--- a/client/programeditbar.ui
+++ b/client/programeditbar.ui
@@ -193,7 +193,7 @@
       <string notr="true">font:13px SIMHEI;</string>
      </property>
      <property name="text">
-      <string/>
+      <string>本地存储器：</string>
      </property>
     </widget>
    </item>
