--- a/base/plusminuswidget.ui
+++ b/base/plusminuswidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>160</width>
-    <height>58</height>
+    <width>142</width>
+    <height>63</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -36,11 +36,26 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <property name="spacing">
-    <number>12</number>
+    <number>6</number>
+   </property>
+   <property name="margin">
+    <number>0</number>
    </property>
    <item>
     <widget class="QPushButton" name="minus_">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>40</horstretch>
+       <verstretch>40</verstretch>
+      </sizepolicy>
+     </property>
      <property name="minimumSize">
+      <size>
+       <width>40</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="maximumSize">
       <size>
        <width>40</width>
        <height>40</height>
@@ -66,6 +81,12 @@ QPushButton:hover{background:transparent; border-image:url(:/LtpClient/image/sub
        <height>20</height>
       </size>
      </property>
+     <property name="maximumSize">
+      <size>
+       <width>38</width>
+       <height>16777215</height>
+      </size>
+     </property>
      <property name="styleSheet">
       <string notr="true">font:18px Arial-BoldMT Bold;
 background:transparent;</string>
@@ -77,7 +98,19 @@ background:transparent;</string>
    </item>
    <item>
     <widget class="QPushButton" name="plus_">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>40</horstretch>
+       <verstretch>40</verstretch>
+      </sizepolicy>
+     </property>
      <property name="minimumSize">
+      <size>
+       <width>40</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="maximumSize">
       <size>
        <width>40</width>
        <height>40</height>
