--- a/client/operationpanel.ui
+++ b/client/operationpanel.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>360</width>
+    <width>363</width>
     <height>290</height>
    </rect>
   </property>
@@ -143,16 +143,45 @@
           <height>81</height>
          </rect>
         </property>
-        <layout class="QHBoxLayout" name="machiningInformationLayout1_">
+        <layout class="QHBoxLayout" name="machiningInformationLayout1_" stretch="20,45,35,90">
          <item>
-          <widget class="QLabel" name="label_6">
+          <widget class="QLabel" name="speedFSymbol_">
+           <property name="styleSheet">
+            <string notr="true">font:24px Arial Bold;</string>
+           </property>
            <property name="text">
-            <string>TextLabel</string>
+            <string>F</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="ltp::base::PlusMinusWidget" name="machiningRatio_" native="true">
+          <widget class="QLabel" name="speedF_">
+           <property name="styleSheet">
+            <string notr="true">font:16px Arial Bold;</string>
+           </property>
+           <property name="text">
+            <string>123456.0</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="speedFUnit_">
+           <property name="styleSheet">
+            <string notr="true">font:10px Arial;</string>
+           </property>
+           <property name="text">
+            <string>mm/min</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="ltp::base::PlusMinusWidget" name="speedFButton_" native="true">
            <property name="minimumSize">
             <size>
              <width>140</width>
