--- a/base/plusminuswidget.ui
+++ b/base/plusminuswidget.ui
@@ -36,7 +36,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <property name="spacing">
-    <number>6</number>
+    <number>0</number>
    </property>
    <property name="margin">
     <number>0</number>
@@ -77,22 +77,47 @@ QPushButton:hover{background:transparent; border-image:url(:/LtpClient/image/sub
     <widget class="QLabel" name="valueLabel_">
      <property name="minimumSize">
       <size>
-       <width>38</width>
+       <width>30</width>
        <height>20</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>38</width>
+       <width>30</width>
        <height>16777215</height>
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">font:18px Arial-BoldMT Bold;
+      <string notr="true">font:Bold 18px Arial-BoldMT;
 background:transparent;</string>
      </property>
      <property name="text">
-      <string>100%</string>
+      <string>100</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="label">
+     <property name="minimumSize">
+      <size>
+       <width>8</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>8</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font:10px Arial; background:transparent;</string>
+     </property>
+     <property name="text">
+      <string>%</string>
      </property>
     </widget>
    </item>
