1.增加轴选支持，增加手轮和jog倍率显示 2.增加物理按键处理类 3.修复processWidget_重复设置layout问题

--- a/client/maincontainer.ui
+++ b/client/maincontainer.ui
@@ -25,16 +25,7 @@
      <property name="styleSheet">
       <string notr="true">background:white;</string>
      </property>
-     <widget class="ltp::client::ProcessWidget" name="processWidget_">
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <property name="spacing">
-        <number>0</number>
-       </property>
-       <property name="margin">
-        <number>0</number>
-       </property>
-      </layout>
-     </widget>
+     <widget class="ltp::client::ProcessWidget" name="processWidget_"/>
      <widget class="ltp::client::FileManagerWidget" name="fileManagerWidget_"/>
      <widget class="ltp::client::ProgramEditWidget" name="programEditWidget_"/>
     </widget>
