--- a/client/selectaxisbar.ui
+++ b/client/selectaxisbar.ui
@@ -67,7 +67,7 @@ QPushButton:hover{background:#0064C8;color:white;}
 </string>
        </property>
        <property name="text">
-        <string>X</string>
+        <string/>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -97,7 +97,7 @@ QPushButton:hover{background:#0064C8; color:white;}
 </string>
        </property>
        <property name="text">
-        <string>Y</string>
+        <string/>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -127,7 +127,7 @@ QPushButton:hover{background:#0064C8; color:white;}
 </string>
        </property>
        <property name="text">
-        <string>Z</string>
+        <string/>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -154,7 +154,7 @@ QPushButton:checked{background:#0064C8; color:white;}
 QPushButton:hover{background:#0064C8; color:white;}</string>
        </property>
        <property name="text">
-        <string>A</string>
+        <string/>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -187,7 +187,7 @@ QPushButton:checked{background:#0064C8; color:white;}
 QPushButton:hover{background:#0064C8; color:white;}</string>
        </property>
        <property name="text">
-        <string>C</string>
+        <string/>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -214,7 +214,7 @@ QPushButton:checked{background:#0064C8; color:white;}
 QPushButton:hover{background:#0064C8; color:white;}</string>
        </property>
        <property name="text">
-        <string>B</string>
+        <string/>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -237,14 +237,14 @@ QPushButton:hover{background:#0064C8; color:white;}</string>
     </spacer>
    </item>
    <item>
-    <widget class="Line" name="line">
+    <widget class="Line" name="line_">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="modeLabel_">
      <property name="minimumSize">
       <size>
        <width>0</width>
@@ -263,7 +263,7 @@ QPushButton:hover{background:#0064C8; color:white;}</string>
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="overrideLabel_">
      <property name="minimumSize">
       <size>
        <width>0</width>
